Docs: Fix some broken links to deleted doc sections

--- a/docs/src/gui/qtvcp-widgets.adoc
+++ b/docs/src/gui/qtvcp-widgets.adoc
@@ -1876,8 +1876,7 @@ Enter any of these _case sensitive_ commands to load the respective program or a
   link:../man/man1/linuxcnctop.1.html[`status`] utility.
 *`CALIBRATION`*::
   Starts LinuxCNC
-  link:../getting-started/updating-linuxcnc.html#_calibration_emccalib_tcl[calibration]
-  utility.
+  emccalib_tcl[calibration] utility.
 *`CLASSICLADDER`*::
   Starts the link:../ladder/classic-ladder.html[ClassicLadder GUI] if the _ClassicLadder realtime HAL component_ was loaded by the machine's config files.
 *`PREFERENCE`*::
