--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -1286,7 +1286,7 @@ Some standard LinuxCNC utilities are provided as an aid in the diagnosis of issu
 - link:../hal/halshow.html#cha:halshow[Halshow]
 - link:../hal/tutorial.html#sec:tutorial-halscope[Halscope]
 - link:../hal/tutorial.html#sec:tutorial-halmeter[Halmeter]
-- link:../getting-started/updating-linuxcnc.html#_calibration_emccalib_tcl[Calibration]
+- Calibration assistant (emccalib.tcl).
 - link:../man/man1/linuxcnctop.1.html[Status]
 
 In addition the following two QtPlasmaC specific utilities are provided:
