Replace broken documentation links to emccalib.tcl and introduce emccalib(1) man page.
The only documentation section about emccalib.tcl was removed in
339a94933bacfcc28c256cb0e2dce82c0d4fd85f, but some references to it
were left behind.  Introduce new manual page for emccalib(1) and use
this in references instead of the broken one.

--- a/docs/src/plasma/qtplasmac.adoc
+++ b/docs/src/plasma/qtplasmac.adoc
@@ -1303,7 +1303,7 @@ Some standard LinuxCNC utilities are provided as an aid in the diagnosis of issu
 - link:../hal/halshow.html#cha:halshow[Halshow]
 - link:../hal/tutorial.html#sec:tutorial-halscope[Halscope]
 - link:../hal/tutorial.html#sec:tutorial-halmeter[Halmeter]
-- link:../getting-started/updating-linuxcnc.html#_calibration_emccalib_tcl[Calibration]
+- link:../man/man1/emccalib.tcl.1.html[Calibration]
 - link:../man/man1/linuxcnctop.1.html[Status]
 
 In addition the following two QtPlasmaC specific utilities are provided:
