fix missing argument documentation

--- a/docs/man/man1/linuxcncrsh.1
+++ b/docs/man/man1/linuxcncrsh.1
@@ -573,7 +573,7 @@ With get, return the probe state - has the probe tripped since the last clear?
 With get, return the current value of the probe signal.
 .RE
 .P
-\fBprobe\fR
+\fBprobe <x> <y> <z>\fR
 .RS
 With set, move toward a certain location.
 If the probe is tripped on the way stop motion, record the position and raise the probe tripped flag.
