--- a/docs/man/man9/hostmot2.9
+++ b/docs/man/man9/hostmot2.9
@@ -694,6 +694,12 @@ a -1 value results in a 0% duty cycle and +1 results in a 100% duty cycle (with 
 This mode is used by some PWM motor drives and PWM to analog converters.
 Typically the direction signal is not used in this mode.
 
+.TP
+(bit input) dither
+When True, dither causes the PWM output to dither between two adjacent PWM register values at the PWM frequency. 
+This increases the PWM resolution when used for analog output purposes, increasing the maximum resolution
+from 12 to 16 bits. Dither is only supported with PWMGen firmware version 1 or greater and only affects PWM outputs,
+not PDM outputs. 
 
 In addition to the per-instance HAL Parameters listed above, there are a couple of HAL Parameters that affect all the pwmgen instances:
 
