--- a/docs/man/man1/linuxcncrsh.1
+++ b/docs/man/man1/linuxcncrsh.1
@@ -305,21 +305,19 @@ With get, ignores any parameters and returns the current flood coolant setting.
 With set, sets the flood setting as specified.
 .RE
 .P
-\fBspindle {forward|reverse|increase|decrease|constant|off} {<spindle>}\fR
+\fBspindle {forward|reverse|increase|decrease|constant|off}\fR
 .RS
 With get, any parameter is ignored and the current spindle state is
 returned as "forward", "reverse", "increase", "decrease", or "off".
 With set, sets the spindle as specified.
 Note that "increase" and "decrease" will cause a speed change in the corresponding direction
 until a "constant" command is sent.
-If "spindle" is omitted, spindle 0 is selected. If -1, all spindles are selected.
 .RE
 .P
-\fBbrake {on|off} {<spindle>}\fR
+\fBbrake {on|off}\fR
 .RS
 With get, any parameter is ignored and the current brake setting is returned.
 With set, the brake is set as specified.
-If "spindle" is omitted, spindle 0 is selected. If -1, all spindles are selected.
 .RE
 .P
 \fBtool\fR
@@ -369,11 +367,10 @@ With get, any parameter is ignored and the current feed override is returned (as
 With set, sets the feed override as specified.
 .RE
 .P
-\fBspindle_override <percent> {<spindle>}\fR
+\fBspindle_override <percent>\fR
 .RS
 With get, any parameter is ignored and the current spindle override is returned (as a percentage of commanded speed).
 With set, sets the spindle override as specified.
-If "spindle" is omitted, spindle 0 is selected. If -1, all spindles are selected.
 .RE
 .P
 \fBabs_cmd_pos [{0|1|...}]\fR
@@ -573,7 +570,7 @@ With get, return the probe state - has the probe tripped since the last clear?
 With get, return the current value of the probe signal.
 .RE
 .P
-\fBprobe <x> <y> <z>\fR
+\fBprobe\fR
 .RS
 With set, move toward a certain location.
 If the probe is tripped on the way stop motion, record the position and raise the probe tripped flag.
