Changed heading to "Overview of G-Coding"
My original heading turns out to be a bad choice.

I'm now proposing changing it to "Overview of G-Coding" to help it stand separate in the tabs from the "G Codes" page.

(ie. when you have a lot of tabs open, the current name of "G Code Overview" gets shortened and starts looking pretty much the same as "G Codes," which is the name of the page that contains the documentation of G-Codes themselves.

--- a/docs/src/gcode/overview.adoc
+++ b/docs/src/gcode/overview.adoc
@@ -2,8 +2,8 @@
 :toc:
 :toclevels: 3
 
-[[cha:ngc-code-overview]]
-= NGC-code Overview
+[[cha:overview-of-g-coding]]
+= Overview of G-Coding
 
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
