docs: qtvcp-widgets fix copy paste error

--- a/docs/src/gui/qtvcp-widgets.adoc
+++ b/docs/src/gui/qtvcp-widgets.adoc
@@ -952,7 +952,7 @@ GCodeGraphics{
 [source,{css}]
 ----
 #gcodegraphics{
-    qproperty-overlay_color: 0.15;
+    qproperty-overlay_alpha: 0.15;
 }
 ----
 
