--- a/docs/src/gui/qtvcp-widgets.adoc
+++ b/docs/src/gui/qtvcp-widgets.adoc
@@ -585,18 +585,25 @@ These set _attributes_ of the selected action (availability depends on the widge
 *`command string`*::
   MDI command string that will be invoked if the MDI command action is selected.
 *`ini_mdi_number`*::
+  (Legacy way) +
   A reference to the _INI file_ `[MDI_COMMAND_LIST]` section. +
   Set an integer of select one line under the INI`s `[MDI_COMMAND]` line starting at 0. +
   Then in the INI file, under the heading `[MDI_COMMAND_LIST]` add appropriate lines. +
-  The commands are separated by the `;`. +
-  The `label` is set after the comma, and `\n` symbol adds a line break.
-//FIXME Space after comma or not ?
+  Commands separated by the `;` will be run one after another +
+  The button label text can be set with any text after a comma, the `\n` symbol adds a line break.
 
+*`ini_mdi_key`*::
+  (prefered way) +
+  A reference to the _INI file_ `[MDI_COMMAND_LIST]` section. +
+  This string will be added to 'MDI_COMMAND_' to form an entry to look for +
+  in the INI file, under the heading `[MDI_COMMAND_LIST]`. +
+  Commands separated by the `;` will be run one after another +
+  The button label text can be set with any text after a comma, the `\n` symbol adds a line break.
 [source,{ini}]
 ----
 [MDI_COMMAND_LIST]
-MDI_COMMAND = G0 Z25;X0 Y0;Z0, Goto\nUser\nZero
-MDI_COMMAND = G53 G0 Z0;G53 G0 X0 Y0, Goto\nMachn\nZero
+MDI_COMMAND_MACRO0 = G0 Z25;X0 Y0;Z0, Goto\nUser\nZero
+MDI_COMMAND_MACRO1 = G53 G0 Z0;G53 G0 X0 Y0, Goto\nMachn\nZero
 ----
 
 //FIXME add link to Indicated_PushButton section
