--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -50,7 +50,7 @@ That's it! You are done! You will find LinuxCNC under the CNC menu.
 [[sec:bookworm_x86]]
 == Install Debian Bookworm on a X86/AMD64 machine
 . Download Balena Etcher from https://etcher.balena.io/
-. Download a Debian Boookworm ISO. There are two versions to consider.
+. Download a Debian Bookworm ISO. There are two versions to consider.
 .. The small netinst .ISO that requires a connection to the internet during the installation (recommended) https://cdimage.debian.org/debian-cd/current/amd64/iso-cd/debian-12.1.0-amd64-netinst.iso
 .. The much larger full live install that includes everything in Debian (use if you do not have an internet connection). https://cdimage.debian.org/debian-cd/current-live/amd64/iso-hybrid/debian-live-12.1.0-amd64-xfce.iso
 . Burn the Debian Image to a USB drive using Balena Etcher.
