Change title to "Overview of G-Code Programming"
Adopting the suggestion by @andypugh  to change the name to Overview of G-Code Programming.

--- a/docs/src/gcode/overview.adoc
+++ b/docs/src/gcode/overview.adoc
@@ -2,8 +2,8 @@
 :toc:
 :toclevels: 3
 
-[[cha:overview-of-g-coding]]
-= Overview of G-Coding
+[[cha:overview-of-g-code-programming]]
+= Overview of G-Code Programming
 
 :ini: {basebackend@docbook:'':ini}
 :hal: {basebackend@docbook:'':hal}
