--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -210,7 +210,7 @@ configuration. Some of the sample configurations include onscreen
 3D simulated machines, look for "Vismach" to see these.
 
 To see if your computer is suitable for software step pulse generation
-run the Latency Test as shown <<latency-test,here>>.
+run the Latency Test as shown <<sec:latency-test,here>>.
 
 At the time of writing the Live-Image is only available with the
 preempt-rt kernel and a matching LinuxCNC. On some hardware this might
